[gd_scene load_steps=8 format=3 uid="uid://bsqnwlgseytya"]

[ext_resource type="Theme" uid="uid://bx3jvtk8472ag" path="res://theme.tres" id="1_p66qh"]
[ext_resource type="Script" uid="uid://oxxt34r7spnd" path="res://rule_edit.gd" id="2_ecw8u"]
[ext_resource type="Script" uid="uid://e7p2n8vjytpk" path="res://SmoothScroll-5aba7cfe17f49b75987c65abab0d7b14bfc42603/addons/SmoothScroll/SmoothScrollContainer.gd" id="3_685p6"]
[ext_resource type="Script" uid="uid://yt40awsagswl" path="res://SmoothScroll-5aba7cfe17f49b75987c65abab0d7b14bfc42603/addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="4_q56rk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ecw8u"]
bg_color = Color(0.0646965, 0.0646965, 0.0646965, 1)

[sub_resource type="Resource" id="Resource_4jwab"]
script = ExtResource("4_q56rk")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_agqk2"]
script = ExtResource("4_q56rk")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[node name="RuleEdit" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p66qh")
script = ExtResource("2_ecw8u")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Scroll" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
metadata/_edit_use_anchors_ = true

[node name="FieldSize" type="Control" parent="Scroll/VBox"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Scroll/VBox/FieldSize"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Scroll/VBox/FieldSize/HBox"]
layout_mode = 2
text = "Field size - "

[node name="X" type="SpinBox" parent="Scroll/VBox/FieldSize/HBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 50.0
max_value = 10000.0
step = 50.0
value = 500.0
rounded = true
prefix = "x:"
select_all_on_focus = true

[node name="Y" type="SpinBox" parent="Scroll/VBox/FieldSize/HBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 50.0
max_value = 10000.0
step = 50.0
value = 500.0
rounded = true
prefix = "y:"
select_all_on_focus = true

[node name="AntStates" type="Control" parent="Scroll/VBox"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Scroll/VBox/AntStates"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Scroll/VBox/AntStates/HBox"]
layout_mode = 2
text = "Ant states - "

[node name="AntStates" type="SpinBox" parent="Scroll/VBox/AntStates/HBox"]
layout_mode = 2
size_flags_horizontal = 3
value = 2.0
select_all_on_focus = true

[node name="Colours" type="Control" parent="Scroll/VBox"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Scroll/VBox/Colours"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Scroll/VBox/Colours/HBox"]
layout_mode = 2
text = "Colours ---- "

[node name="Colours" type="SpinBox" parent="Scroll/VBox/Colours/HBox"]
layout_mode = 2
size_flags_horizontal = 3
value = 2.0
select_all_on_focus = true

[node name="Rand" type="Control" parent="Scroll/VBox"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Scroll/VBox/Rand"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Scroll/VBox/Rand/HBox"]
layout_mode = 2
text = "Randomize ---"

[node name="ToAll" type="Button" parent="Scroll/VBox/Rand/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "To all"

[node name="ToStates" type="Button" parent="Scroll/VBox/Rand/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "To states"

[node name="ToColour" type="Button" parent="Scroll/VBox/Rand/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "To colour"

[node name="Rotation" type="Button" parent="Scroll/VBox/Rand/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation"

[node name="Colours" type="Button" parent="Scroll/VBox/Rand/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Colours"

[node name="EditDict" type="Control" parent="Scroll/VBox"]
custom_minimum_size = Vector2(0, 320)
layout_mode = 2

[node name="BG" type="Panel" parent="Scroll/VBox/EditDict"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ecw8u")

[node name="ScrollCont" type="ScrollContainer" parent="Scroll/VBox/EditDict"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_685p6")
wheel_scroll_damper = SubResource("Resource_4jwab")
dragging_scroll_damper = SubResource("Resource_agqk2")
metadata/_custom_type_script = "uid://e7p2n8vjytpk"
metadata/_edit_use_anchors_ = true

[node name="Main" type="Control" parent="Scroll/VBox/EditDict/ScrollCont"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Labels" type="Control" parent="Scroll/VBox/EditDict/ScrollCont/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Edits" type="Control" parent="Scroll/VBox/EditDict/ScrollCont/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Colours" type="Control" parent="Scroll/VBox/EditDict/ScrollCont/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[connection signal="value_changed" from="Scroll/VBox/FieldSize/HBox/X" to="." method="_on_x_value_changed"]
[connection signal="value_changed" from="Scroll/VBox/FieldSize/HBox/Y" to="." method="_on_y_value_changed"]
[connection signal="value_changed" from="Scroll/VBox/AntStates/HBox/AntStates" to="." method="_on_amt_s_value_changed"]
[connection signal="value_changed" from="Scroll/VBox/Colours/HBox/Colours" to="." method="_on_amt_c_value_changed"]
[connection signal="pressed" from="Scroll/VBox/Rand/HBox/ToAll" to="." method="_on_to_all_pressed"]
[connection signal="pressed" from="Scroll/VBox/Rand/HBox/ToStates" to="." method="_on_to_states_pressed"]
[connection signal="pressed" from="Scroll/VBox/Rand/HBox/ToColour" to="." method="_on_to_colour_pressed"]
[connection signal="pressed" from="Scroll/VBox/Rand/HBox/Rotation" to="." method="_on_rotation_pressed"]
